--- a/bode_style.css
+++ b/bode_style.css
@@ -1,5 +1,7 @@
 div.bode-section {
-    margin-left: 50%;
+    margin-top: 10px;
+    border: 1px solid black;
+    padding: 10px;
 }
 div.plot-container {
     width: 800px;
